--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-crispy-forms==1.11.2
 django-extensions==3.1.3
 django-taggit==1.4.0
 djangorestframework==3.12.4
+gunicorn==20.1.0
 idna==2.10
 oauthlib==3.1.0
 psycopg2-binary==2.9.1
